force-app/main/default/objects/FormElement__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Type__c</fullName>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>component</fullName>
                    <default>true</default>
                    <label>component</label>
                </value>
                <value>
                    <fullName>wizard page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Page__c</fullName>
        <label>Form Page</label>
        <referenceTo>FormPage__mdt</referenceTo>
        <relationshipLabel>Form Elements</relationshipLabel>
        <relationshipName>Form_Elements</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Element__c</fullName>
        <label>Parent Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Form Element</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>API_Name__c</columns>
        <columns>Form_Page__c</columns>
        <columns>Display_Type__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Parent_Element__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Form Elements</pluralLabel>
</CustomObject>